--- a/index.html
+++ b/index.html
@@ -3,11 +3,355 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SASS Tutorial template</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <title>Webstudio</title>
   </head>
   <body>
-    <h2>ПРивіт</h2>
-
+    <!-- HEADER -->
+     <header class="header container">
+      <a href="./index.html" class="logo"><span class="logo__accent">Web</span>Studio</a>
+      <nav class="header__nav">
+        <ul class="header__nav-list">
+          <li class="header__nav-item header-item">
+            <a href="./index.html" class="header__nav-link">
+              Studio
+            </a>
+          </li>
+          <li class="header__nav-item header-item">
+            <a href="#portfolio" class="header__nav-link">
+              Portfolio
+            </a>
+          </li>
+          <li class="header__nav-item header-item">
+            <a href="#contacts" class="header__nav-link">
+              Contacts
+            </a>
+          </li>
+        </ul>
+        <ul class="header__contacts">
+          <li class="header__contacts-item header-item"><a href="mailto:info@devstudio.com" rel="noopener noreferrer">info@devstudio.com</a></li>
+          <li class="header__contacts-item header-item"><a href="tel:+110001111111" rel="noopener noreferrer">+11 (000) 111-11-11</a></li>
+        </ul>
+        <ul class="social-list header__social">
+          <li class="social-item"><a class="social-link" href="">
+            <svg class="social-svg">
+              <use href="./src/img/svg/symbol-defs.svg#icon-instagram"></use>
+            </svg>
+          </a></li>
+          <li class="social-item"><a class="social-link" href="">
+            <svg class="social-svg">
+              <use href="./src/img/svg/symbol-defs.svg#icon-twitter"></use>
+            </svg>
+          </a></li>
+          <li class="social-item"><a class="social-link" href="">
+            <svg class="social-svg">
+              <use href="./src/img/svg/symbol-defs.svg#icon-facebook"></use>
+            </svg>
+          </a></li>
+          <li class="social-item"><a class="social-link" href="">
+            <svg class="social-svg">
+              <use href="./src/img/svg/symbol-defs.svg#icon-linkedin"></use>
+            </svg>
+          </a></li>
+        </ul>
+        <button class="header__button-close js-menu-close">
+          <svg>
+            <use href="./src/img/svg/symbol-defs.svg#icon-close"></use>
+          </svg>
+        </button>
+      </nav>
+      <button class="header__button-open  js-menu-open">
+        <svg>
+          <use href="./src/img/svg/symbol-defs.svg#icon-menu"></use>
+        </svg>
+      </button>
+     </header>
+    <main>
+       <!-- HERO -->
+      <section class="section hero">
+        <div class="container hero__wrapper">
+          <h1 class="hero__title">Effective Solutions for Your Business</h1>
+          <button type="button" class="button b-r js-button">Order Service</button>
+        </div>
+       </section>
+      <!-- ADVANTAGES -->
+       <section class="section advantages">
+        <div class="container">
+          <!-- <h2>Advantages</h2> -->
+          <ul class="advantages__list">
+            <li class="advantages__item">
+              <div class="decorative-img"></div>
+              <h3 class="secondary-title advantages__title antenna-title">Strategy</h3>
+              <p>
+                Our goal is to identify the business
+                problem to walk away with the perfect and creative solution. 
+              </p>
+            </li>
+            <li class="advantages__item">
+              <div class="decorative-img"></div>
+              <h3 class="secondary-title advantages__title astronaut-title">Punctuality</h3>
+              <p>
+                Bring the key message to the brand's audience for the best
+                price within the shortest possible time.
+              </p>
+            </li>
+            <li class="advantages__item">
+              <div class="decorative-img"></div>
+              <h3 class="secondary-title advantages__title clock-title">Diligence</h3>
+              <p>
+                Research and confirm brands with the
+                strongest digital growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="advantages__item">
+              <div class="decorative-img"></div>
+              <h3 class="secondary-title advantages__title diagram-title">Technologies</h3>
+              <p>
+                Design practice focused on digital experiences.
+                We bring forth a deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
+       </section>
+      <!-- OUR_TEAM -->
+      <section class="section our-team">
+        <div class="container">
+          <h2 class="title">Our Team</h2>
+        <ul class="our-team__list">
+          <li class="our-team__item">
+            <img src="./src/img/team/mark-desktop-2x.jpg" alt="mark">
+            <div class="our-team__wrapper">
+              <h3 class="secondary-title">Mark Guerrero</h3>
+              <p>Product Designer</p>
+              <ul class="social-list">
+                <li class="social-item"><a class="social-link" href="">
+                  <svg class="social-svg">
+                    <use href="./src/img/svg/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a></li>
+                <li class="social-item"><a class="social-link" href="">
+                  <svg class="social-svg">
+                    <use href="./src/img/svg/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a></li>
+                <li class="social-item"><a class="social-link" href="">
+                  <svg class="social-svg">
+                    <use href="./src/img/svg/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a></li>
+                <li class="social-item"><a class="social-link" href="">
+                  <svg class="social-svg">
+                    <use href="./src/img/svg/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a></li>
+              </ul>
+            </div>
+          </li>
+          <li class="our-team__item">
+            <img src="./src/img/team/tom-desktop-2x.jpg" alt="tom">
+            <div class="our-team__wrapper">
+              <h3 class="secondary-title">Tom Ford</h3>
+              <p>Frontend Developer</p>
+              <ul class="social-list">
+                <li class="social-item"><a class="social-link" href="">
+                  <svg class="social-svg">
+                    <use href="./src/img/svg/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a></li>
+                <li class="social-item"><a class="social-link" href="">
+                  <svg class="social-svg">
+                    <use href="./src/img/svg/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a></li>
+                <li class="social-item"><a class="social-link" href="">
+                  <svg class="social-svg">
+                    <use href="./src/img/svg/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a></li>
+                <li class="social-item"><a class="social-link" href="">
+                  <svg class="social-svg">
+                    <use href="./src/img/svg/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a></li>
+              </ul>
+            </div>
+          </li>
+          <li class="our-team__item">
+            <img src="./src/img/team/camila-desktop-2x.jpg" alt="camila">
+            <div class="our-team__wrapper">
+              <h3 class="secondary-title">Camila Garcia</h3>
+              <p>Marketing</p>
+              <ul class="social-list">
+                <li class="social-item"><a class="social-link" href="">
+                  <svg class="social-svg">
+                    <use href="./src/img/svg/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a></li>
+                <li class="social-item"><a class="social-link" href="">
+                  <svg class="social-svg">
+                    <use href="./src/img/svg/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a></li>
+                <li class="social-item"><a class="social-link" href="">
+                  <svg class="social-svg">
+                    <use href="./src/img/svg/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a></li>
+                <li class="social-item"><a class="social-link" href="">
+                  <svg class="social-svg">
+                    <use href="./src/img/svg/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a></li>
+              </ul>
+            </div>
+          </li>
+          <li class="our-team__item">
+            <img src="./src/img/team/daniel-desktop-2x.jpg" alt="daniel">
+            <div class="our-team__wrapper">
+              <h3 class="secondary-title">Daniel Wilson</h3>
+              <p>UI Designer</p>
+              <ul class="social-list">
+                <li class="social-item"><a class="social-link" href="">
+                  <svg class="social-svg">
+                    <use href="./src/img/svg/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a></li>
+                <li class="social-item"><a class="social-link" href="">
+                  <svg class="social-svg">
+                    <use href="./src/img/svg/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a></li>
+                <li class="social-item"><a class="social-link" href="">
+                  <svg class="social-svg">
+                    <use href="./src/img/svg/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a></li>
+                <li class="social-item"><a class="social-link" href="">
+                  <svg class="social-svg">
+                    <use href="./src/img/svg/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+        </div>
+      </section>
+      <!-- PORTFOLIO -->
+      <section class="section portfolio">
+        <div class="container">
+          <h2 class="title">Our Portfolio</h2>
+          <ul class="portfolio__list">
+            <li class="portfolio__item">
+              <a class="portfolio__link" href="">
+                <img src="./src/img/portfolio/banking-desktop-2x.jpg" alt="banking-app" width="360">
+                <div class="portfolio__description-wrapper">
+                  <h3 class="secondary-title">Banking App </h3>
+                  <p>App</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio__item">
+              <a class="portfolio__link" href="">
+                <img src="./src/img/portfolio/paymant-desktop-2x.jpg" alt="paymant" width="360">
+                <div class="portfolio__description-wrapper">
+                  <h3 class="secondary-title">Cashless</h3>
+                  <p>Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio__item">
+              <a class="portfolio__link" href="">
+                <img src="./src/img/portfolio/meditation-desktop-2x.jpg" alt="meditation-app" width="360">
+                <div class="portfolio__description-wrapper">
+                  <h3 class="secondary-title">Meditation App</h3>
+                  <p>App</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio__item">
+              <a class="portfolio__link" href="">
+                <img src="./src/img/portfolio/taxi-service-desktop-2x.jpg" alt="taxi-service" width="360">
+                <div class="portfolio__description-wrapper">
+                  <h3 class="secondary-title">Taxi Service</h3>
+                  <p>Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio__item">
+              <a class="portfolio__link" href="">
+                <img src="./src/img/portfolio/iluminations-desktop-2x.jpg" alt="ilumination" width="360">
+                <div class="portfolio__description-wrapper">
+                  <h3 class="secondary-title">Screen Illustrations</h3>
+                  <p>Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio__item">
+              <a class="portfolio__link" href="">
+                <img src="./src/img/portfolio/courses-desktop-2x.jpg" alt="courses" width="360">
+                <div class="portfolio__description-wrapper">
+                  <h3 class="secondary-title">Online Courses</h3>
+                  <p>Marketing</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer class="section footer">
+      <div class="container">
+        <div class="wrapper">
+          <div class="footer__logo-wrapper">
+            <a href="./index.html" class="logo footer__logo"><span class="logo__accent">Web</span>Studio</a>
+            <p class="footer__description">
+              Increase the flow of customers and sales for your business 
+              with digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="footer__social-wrapper">
+            <p class="footer__description-b">Social media</p>
+            <ul class="social-list">
+              <li class="social-item"><a class="social-link" href="">
+                <svg class="social-svg">
+                  <use href="./src/img/svg/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a></li>
+              <li class="social-item"><a class="social-link" href="">
+                <svg class="social-svg">
+                  <use href="./src/img/svg/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a></li>
+              <li class="social-item"><a class="social-link" href="">
+                <svg class="social-svg">
+                  <use href="./src/img/svg/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a></li>
+              <li class="social-item"><a class="social-link" href="">
+                <svg class="social-svg">
+                  <use href="./src/img/svg/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a></li>
+            </ul>
+          </div>
+        </div>
+        <form class="footer__form">
+          <p class="footer__description-b">Subscribe</p>
+          <div class="input-werapper">
+            <input class="footer__form-input b-r" type="email" name="email" placeholder="E-mail">
+            <button class="footer__form-button b-r">Subscribe
+              <svg>
+                <use href="./src/img/svg/symbol-defs.svg#icon-frame"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
+      </div>
+    </footer>
     <script type="module" src="./src/js/main.js"></script>
   </body>
 </html>
