--- a/index.html
+++ b/index.html
@@ -425,18 +425,30 @@
         <h2>Leave your contacts and we will call you back</h2>
         <form class="modal__form">
           <label class="modal__label">Name
+            <svg class="modal__svg" width="24" height="24">
+              <use href="/src/img/svg/symbol-defs.svg#icon-person"></use>
+            </svg>
             <input class="modal__input b-r" type="text">
           </label>
           <label class="modal__label">Phone
+            <svg class="modal__svg" width="24" height="24">
+              <use href="/src/img/svg/symbol-defs.svg#icon-phone"></use>
+            </svg>
             <input class="modal__input b-r" type="tel">
           </label>
           <label class="modal__label">Email
+            <svg class="modal__svg" width="24" height="24">
+              <use href="/src/img/svg/symbol-defs.svg#icon-email"></use>
+            </svg>
             <input class="modal__input b-r" type="email">
           </label>
           <label class="modal__label">Comment
             <textarea class="modal__text-area b-r" placeholder="Text input"></textarea>
           </label>
-          <label class="modal__label"><input type="checkbox">I accept the terms and conditions of the Privacy Policy</label>
+          <label class="modal__label modal__label-agre">
+            <input class="modal__agre b-r" type="checkbox">I accept the terms and conditions of the  
+            <a class="accent" href="">Privacy Policy</a>
+          </label>
           <button class="modal__send b-r">Send</button>
         </form>
         <button type="button" class="modal-close js-modal-close" aria-label="button-close-modal">
