--- a/index.html
+++ b/index.html
@@ -363,48 +363,46 @@
       </section>
     </main>
     <footer class="section footer">
-      <div class="container">
-        <div class="wrapper">
-          <div class="footer__logo-wrapper">
-            <a href="./index.html" class="logo footer__logo"><span class="logo__accent">Web</span>Studio</a>
-            <p class="footer__description">
-              Increase the flow of customers and sales for your business 
-              with digital marketing & growth solutions.
-            </p>
-          </div>
-          <div class="footer__social-wrapper">
-            <p class="footer__description-b">Social media</p>
-            <ul class="social-list">
-              <li class="social-item">
-                <a class="social-link" href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="instagram-link">
-                  <svg class="social-svg">
-                    <use href="./src/img/svg/symbol-defs.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-item">
-                <a class="social-link" href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="twitter-link">
-                  <svg class="social-svg">
-                    <use href="./src/img/svg/symbol-defs.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-item">
-                <a class="social-link" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="facebook-link">
-                  <svg class="social-svg">
-                    <use href="./src/img/svg/symbol-defs.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-item">
-                <a class="social-link" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="linkedin-link">
-                  <svg class="social-svg">
-                    <use href="./src/img/svg/symbol-defs.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+      <div class="container footer__wrapper">
+        <div class="footer__logo-wrapper">
+          <a href="./index.html" class="logo footer__logo"><span class="logo__accent">Web</span>Studio</a>
+          <p class="footer__description">
+            Increase the flow of customers and sales for your business 
+            with digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer__social-wrapper">
+          <p class="footer__description-b">Social media</p>
+          <ul class="social-list footer__social-list">
+            <li class="social-item">
+              <a class="social-link" href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="instagram-link">
+                <svg class="social-svg">
+                  <use href="./src/img/svg/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link" href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="twitter-link">
+                <svg class="social-svg">
+                  <use href="./src/img/svg/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="facebook-link">
+                <svg class="social-svg">
+                  <use href="./src/img/svg/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-link" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="linkedin-link">
+                <svg class="social-svg">
+                  <use href="./src/img/svg/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
         <form class="footer__form">
           <p class="footer__description-b">Subscribe</p>
