added atribute loading and width

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <h2 class="title">Our Team</h2>
         <ul class="our-team__list">
           <li class="our-team__item">
-            <img src="./src/img/team/mark-desktop-2x.jpg" alt="mark">
+            <img src="./src/img/team/mark-desktop-2x.jpg" loading="lazy" width="264" alt="Mark">
             <div class="our-team__wrapper">
               <h3 class="secondary-title m-b">Mark Guerrero</h3>
               <p class="text m-b">Product Designer</p>
@@ -171,7 +171,7 @@
             </div>
           </li>
           <li class="our-team__item">
-            <img src="./src/img/team/tom-desktop-2x.jpg" alt="tom">
+            <img src="./src/img/team/tom-desktop-2x.jpg" loading="lazy" width="264" alt="Tom">
             <div class="our-team__wrapper">
               <h3 class="secondary-title m-b">Tom Ford</h3>
               <p class="text m-b">Frontend Developer</p>
@@ -208,7 +208,7 @@
             </div>
           </li>
           <li class="our-team__item">
-            <img src="./src/img/team/camila-desktop-2x.jpg" alt="camila">
+            <img src="./src/img/team/camila-desktop-2x.jpg" loading="lazy" width="264" alt="Camila">
             <div class="our-team__wrapper">
               <h3 class="secondary-title m-b">Camila Garcia</h3>
               <p class="text m-b">Marketing</p>
@@ -245,7 +245,7 @@
             </div>
           </li>
           <li class="our-team__item">
-            <img src="./src/img/team/daniel-desktop-2x.jpg" alt="daniel">
+            <img src="./src/img/team/daniel-desktop-2x.jpg" loading="lazy" width="264" alt="daniel">
             <div class="our-team__wrapper">
               <h3 class="secondary-title m-b">Daniel Wilson</h3>
               <p class="text m-b">UI Designer</p>
@@ -293,7 +293,7 @@
               <a class="portfolio__link" href="">
                 <div class="portfolio__img-wrapper">
                   <p class="portfolio__text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                  <img class="portfolio__img" src="./src/img/portfolio/banking-desktop-2x.jpg" alt="banking-app" width="360">
+                  <img class="portfolio__img" src="./src/img/portfolio/banking-desktop-2x.jpg" alt="banking-app" loading="lazy" width="360">
                 </div>
                 <div class="portfolio__description-wrapper">
                   <h3 class="secondary-title m-b">Banking App </h3>
@@ -305,7 +305,7 @@
               <a class="portfolio__link" href="">
                 <div class="portfolio__img-wrapper">
                   <p class="portfolio__text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                  <img src="./src/img/portfolio/paymant-desktop-2x.jpg" alt="paymant" width="360">
+                  <img src="./src/img/portfolio/paymant-desktop-2x.jpg" loading="lazy" alt="paymant" width="360">
                 </div>
                 <div class="portfolio__description-wrapper">
                   <h3 class="secondary-title m-b">Cashless</h3>
@@ -317,7 +317,7 @@
               <a class="portfolio__link" href="">
                 <div class="portfolio__img-wrapper">
                   <p class="portfolio__text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                  <img src="./src/img/portfolio/meditation-desktop-2x.jpg" alt="meditation-app" width="360">
+                  <img src="./src/img/portfolio/meditation-desktop-2x.jpg" loading="lazy" alt="meditation-app" width="360">
                 </div>
                 <div class="portfolio__description-wrapper">
                   <h3 class="secondary-title m-b">Meditation App</h3>
@@ -329,7 +329,7 @@
               <a class="portfolio__link" href="">
                 <div class="portfolio__img-wrapper">
                   <p class="portfolio__text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                  <img src="./src/img/portfolio/taxi-service-desktop-2x.jpg" alt="taxi-service" width="360">
+                  <img src="./src/img/portfolio/taxi-service-desktop-2x.jpg" loading="lazy" alt="taxi-service" width="360">
                 </div>
                 <div class="portfolio__description-wrapper">
                   <h3 class="secondary-title m-b">Taxi Service</h3>
@@ -341,7 +341,7 @@
               <a class="portfolio__link" href="">
                 <div class="portfolio__img-wrapper">
                   <p class="portfolio__text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                  <img src="./src/img/portfolio/iluminations-desktop-2x.jpg" alt="ilumination" width="360">
+                  <img src="./src/img/portfolio/iluminations-desktop-2x.jpg" loading="lazy" alt="ilumination" width="360">
                 </div>
                 <div class="portfolio__description-wrapper">
                   <h3 class="secondary-title m-b">Screen Illustrations</h3>
@@ -353,7 +353,7 @@
               <a class="portfolio__link" href="">
                 <div class="portfolio__img-wrapper">
                   <p class="portfolio__text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                  <img src="./src/img/portfolio/courses-desktop-2x.jpg" alt="courses" width="360">
+                  <img src="./src/img/portfolio/courses-desktop-2x.jpg" loading="lazy" alt="courses" width="360">
                 </div>
                 <div class="portfolio__description-wrapper">
                   <h3 class="secondary-title m-b">Online Courses</h3>
