--- a/index.html
+++ b/index.html
@@ -469,8 +469,8 @@
                       src="/src/img/portfolio/iluminations-desktop-1x.jpg" 
                       srcset="/src/img/portfolio/iluminations-desktop-2x.jpg 2x, 
                               /src/img/portfolio/iluminations-desktop-3x.jpg 3x" 
-                      alt="taxi-service" 
-                      loading="iluminations" 
+                      alt="iluminations" 
+                      loading="lazy" 
                       width="360">
                   </picture>
                 </div>
@@ -496,8 +496,8 @@
                       src="/src/img/portfolio/courses-desktop-1x.jpg" 
                       srcset="/src/img/portfolio/courses-desktop-2x.jpg 2x, 
                               /src/img/portfolio/courses-desktop-3x.jpg 3x" 
-                      alt="taxi-service" 
-                      loading="courses" 
+                      alt="courses" 
+                      loading="lazy" 
                       width="360">
                   </picture>
                 </div>
