Closing the mobile menu when clicking on some links

--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
             </li>
           </ul>
         </div>
-        <form class="footer__form">
+        <form class="footer__form" id="contacts">
           <p class="footer__description-b">Subscribe</p>
           <div class="input-werapper">
             <input class="footer__form-input b-r" type="email" name="email" placeholder="E-mail">
